--- a/src/app/components/articles/article-type-main/article-type-main.component.scss
+++ b/src/app/components/articles/article-type-main/article-type-main.component.scss
@@ -1,4 +1,68 @@
 @use "/src/_import.scss" as *;
+@media (max-width: 768px) {
+
+    .main-type1 {
+        //position:relative;
+        //height:700px;
+    
+        img {
+            width:100%;
+        }
+    
+        .blur {
+        position: relative;
+        left: 0px;
+        bottom: 130px;
+    
+        backdrop-filter: blur(9.5px);
+    
+        .description {
+    
+            .fun-color{
+                color:$category-fun-color;
+            }
+    
+            .sport-color{
+                color:$category-sport-color;
+            }
+    
+            .carie-color{
+                color:$category-health-color;
+            }
+            
+            .miam-color{
+                color:$category-food-color;
+            }
+    
+            .ca-coute-bonbon-color{
+                color:$category-economy-color;
+            }
+    
+            margin-left:1rem;
+            h2 {
+                color:#FECEE9;
+                font-weight: normal;
+            }
+        
+            h4 {
+               
+    
+                font-size:1.7rem;
+                margin-bottom:1rem;
+                
+            }
+            time {
+                color:#FECEE9;
+                font-size: 1rem;
+            }
+        }
+    
+        }
+     
+    }
+    }
+
+@media (min-width: 768px) {
 
 .main-type1 {
     //position:relative;
@@ -11,11 +75,32 @@
     .blur {
     position: relative;
     left: 0px;
-    bottom: 170px;
+    bottom: 100px;
 
     backdrop-filter: blur(9.5px);
 
     .description {
+
+        .fun-color{
+            color:$category-fun-color;
+        }
+
+        .sport-color{
+            color:$category-sport-color;
+        }
+
+        .carie-color{
+            color:$category-health-color;
+        }
+        
+        .miam-color{
+            color:$category-food-color;
+        }
+
+        .ca-coute-bonbon-color{
+            color:$category-economy-color;
+        }
+
         margin-left:1rem;
         h2 {
             color:#FECEE9;
@@ -23,7 +108,8 @@
         }
     
         h4 {
-            color:$category-health-color;
+           
+
             font-size:1.7rem;
             margin-bottom:1rem;
             
@@ -35,6 +121,6 @@
     }
 
     }
-  
  
+}
 }
