Adding changes on the componants for desktop version

--- a/src/app/pages/articles/articles.component.scss
+++ b/src/app/pages/articles/articles.component.scss
@@ -34,6 +34,9 @@
     }
     .top {
         margin:$main-border;
+        .side {
+            display: none;
+        }
     }
     
     .small {
