--- a/src/app/components/articles/article-type-main/article-type-main.component.scss
+++ b/src/app/components/articles/article-type-main/article-type-main.component.scss
@@ -4,7 +4,8 @@
     .main-type1 {
         //position:relative;
         //height:700px;
-    
+        
+
         img {
             width:100%;
         }
@@ -67,15 +68,16 @@
 .main-type1 {
     //position:relative;
     //height:700px;
-
+    margin-top:3rem;
     img {
-        width:100%;
+        width:95%;
     }
 
     .blur {
+    width:95%;
     position: relative;
     left: 0px;
-    bottom: 100px;
+    bottom: 104px;
 
     backdrop-filter: blur(9.5px);
 
@@ -103,20 +105,22 @@
 
         margin-left:1rem;
         h2 {
-            color:#FECEE9;
+            opacity: 0.6;
             font-weight: normal;
+            font-size:1.4rem;
+            height:50px;
         }
     
         h4 {
            
 
-            font-size:1.7rem;
-            margin-bottom:1rem;
+            font-size:1.5rem;
+            //margin-bottom:1rem;
             
         }
         time {
-            color:#FECEE9;
-            font-size: 1rem;
+            opacity: 0.6;
+            font-size: 0.8rem;
         }
     }
 
