--- a/src/app/components/articles/article-type-side/article-type-side.component.scss
+++ b/src/app/components/articles/article-type-side/article-type-side.component.scss
@@ -1,7 +1,5 @@
 @use "/src/_import.scss" as *;
 
-@media (min-width: 768px) {
-
 .fun-background{
     background-color:$category-fun-color;
 }
@@ -20,18 +18,22 @@
 
 .ca-coute-bonbon-background{
     background-color:$category-economy-color;
+
 }
 
 .main-type2 {
-    
+
+
     .side-band {
         display:flex;
         flex-direction:row;
-        margin-left: 0.5rem;
+        margin-left: 0.3rem;
         background-color: white;
+        padding-top: 0.5rem;
+        padding-bottom:0.5rem;
 
         img {
-            height:78px;
+            height:92px;
         }
     
         .description {
@@ -73,12 +75,4 @@
     
     }
 
-}
-
-}
-
-@media (max-width:768px){
-    .main-type2{
-        display:none;
-    }
 }
