--- a/src/app/components/articles/article-type-small/article-type-small.component.scss
+++ b/src/app/components/articles/article-type-small/article-type-small.component.scss
@@ -10,22 +10,27 @@
     
         .fun-background{
             background-color:$category-fun-color;
+            opacity:0.7;
         }
         
         .sport-background{
             background-color:$category-sport-color;
+            opacity:0.7;
         }
         
         .carie-background{
             background-color:$category-health-color;
+            opacity:0.7;
         }
         
         .miam-background{
             background-color:$category-food-color;
+            opacity:0.7;
         }
         
         .ca-coute-bonbon-background{
             background-color:$category-economy-color;
+            opacity:0.7;
         }
     
         .description {
@@ -95,28 +100,33 @@
 
     .fun-background{
         background-color:$category-fun-color;
+        opacity:0.7;
     }
     
     .sport-background{
         background-color:$category-sport-color;
+        opacity:0.7;
     }
     
     .carie-background{
         background-color:$category-health-color;
+        opacity:0.7;
     }
     
     .miam-background{
         background-color:$category-food-color;
+        opacity:0.7;
     }
     
     .ca-coute-bonbon-background{
         background-color:$category-economy-color;
+        opacity:0.7;
     }
 
     .description {
         box-sizing: border-box;
-        height:80px;
-        bottom:54px;
+        min-height:106px;
+        bottom:110px;
         position:relative;
         object-position: left bottom;
         padding-left:.5rem;
@@ -160,7 +170,13 @@
             }
             h3 {
                 font-weight:500;
-                font-size:1rem;
+                font-size:0.9rem;
+                height:50px;
+                margin-top:0.5rem;
+            }
+
+            time {
+                font-size:0.8rem;
             }
         }
         
