First commit : service + component + pipes for stocks

--- a/src/_import.scss
+++ b/src/_import.scss
@@ -15,3 +15,5 @@ $category-economy-color: #E41E26; // Catégorie Economie : ça coute bonbon
 $main-border: 1rem;
 $small-border: 0.5rem;
 $big-border: 2rem;
+
+$min-width-desktop: 800px;
