--- a/src/app/components/articles/article-type-main/article-type-main.component.scss
+++ b/src/app/components/articles/article-type-main/article-type-main.component.scss
@@ -13,7 +13,7 @@
         .blur {
         position: relative;
         left: 0px;
-        bottom: 130px;
+        bottom: 97px;
     
         backdrop-filter: blur(9.5px);
     
@@ -41,20 +41,22 @@
     
             margin-left:1rem;
             h2 {
-                color:#FECEE9;
+                opacity: 0.6;
                 font-weight: normal;
+                font-size:1.1rem;
+                height:50px;
             }
         
             h4 {
                
     
-                font-size:1.7rem;
-                margin-bottom:1rem;
+                font-size:1.2rem;
+                //margin-bottom:1rem;
                 
             }
             time {
-                color:#FECEE9;
-                font-size: 1rem;
+                opacity: 0.6;
+                font-size: 0.8rem;
             }
         }
     
