--- a/src/app/components/articles/article-type-small/article-type-small.component.scss
+++ b/src/app/components/articles/article-type-small/article-type-small.component.scss
@@ -35,8 +35,8 @@
     
         .description {
             box-sizing: border-box;
-            height:80px;
-            bottom:54px;
+            min-height:106px;
+            bottom:109px;
             position:relative;
             object-position: left bottom;
             padding-left:.5rem;
@@ -80,8 +80,15 @@
                 }
                 h3 {
                     font-weight:500;
-                    font-size:1rem;
+                    font-size:0.9rem;
+                    height:50px;
+                    margin-top:0.5rem;
                 }
+
+                time {
+                    font-size:0.8rem;
+                }
+
             }
             
         }
@@ -96,6 +103,8 @@
 
     img {
         width:100%;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
     }
 
     .fun-background{
