--- a/src/app/components/articles/article-type-side/article-type-side.component.html
+++ b/src/app/components/articles/article-type-side/article-type-side.component.html
@@ -4,7 +4,7 @@
         <img src={{article.publication_image}}>
         <div class="description">
             <h4>{{article.publication_date | date : 'HH:mm'}} | <span [ngClass]="article.categories[0].slug+'-color'">{{article.categories[0].name}}</span></h4>
-            <h3>Comment les bienfaits du sucre se propagent à travers tout le corps</h3>
+            <h3>{{article.title}}</h3>
         </div>
     </div>
 </article>
