creation des articles individuels 2.ts à 8.ts et mise à jur du catalogue articles.ts

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,7 +12,7 @@
                 <li><a id="sport" [routerLink]="">NRgy</a></li>
                 <li><a id="carie" [routerLink]="">Carie</a></li>
                 <li><a id="miam" [routerLink]="">Miam</a></li>
-                <li><a id="money" [routerLink]="">Ca coute bonbon</a></li>
+                <li><a id="money" [routerLink]="">Ça coute bonbon</a></li>
                 <li><a id="login" [routerLink]="">Connexion</a></li>
                 <li></li>
             </ul>
