--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,10 +12,18 @@
                 <li><a id="sport" [routerLink]="">NRgy</a></li>
                 <li><a id="carie" [routerLink]="">Carie</a></li>
                 <li><a id="miam" [routerLink]="">Miam</a></li>
-                <li><a id="money" [routerLink]="">Ca coute bonbon</a></li>
-                <li><a id="login" [routerLink]="">Connexion</a></li>
+                <li><a id="money" [routerLink]="">Ça coûte bonbon</a></li>
+                <li><a id="login" [routerLink]="">Connexion<i class="fa fa-user" aria-hidden="true"></i></a></li>
                 <li></li>
             </ul>
+
+            <ul id="smallscr">
+                <li><a id="accueil" [routerLink]="APP_ROUTES.index">Accueil</a></li>
+                <li><a id="api" [routerLink]="">Api</a></li>
+                <li><a id="categ2" [routerLink]="">Catégories</a></li>
+                <li><a id="login" [routerLink]="">Connexion</a></li>
+            </ul>
         </nav>
+
     </div>
 </header>
