--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,6 @@
 @use "/src/_import.scss" as *;
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: $min-width-desktop) {
     #head {
         width: 99%;
         height: 90px;
@@ -40,7 +40,13 @@
             color: $secondary-text-color;
 
 
+
         }
+
+        li {
+            height: 70px;
+        }
+
 
 
 
@@ -105,10 +111,9 @@
             animation: alternate-reverse;
         }
 
-        #login {
-            background-image: image-set("/assets/images/connexion.png");
-            background-repeat: no-repeat;
-            color: transparent;
+
+        #smallscr {
+            visibility: hidden;
         }
 
 
@@ -122,7 +127,7 @@
 
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: $min-width-desktop) {
 
 
     #head {
@@ -136,10 +141,76 @@
         height: 80px;
         padding-top: 6%;
         padding-left: 4%;
+
+        nav {
+            align-self: center;
+
+        }
+
+        .divnav {
+            visibility: hidden;
+        }
+
+        a {
+            height: 3rem;
+        }
+
+        ul,
+        li,
+        a {
+            box-sizing: border border-box;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 13px;
+            height: max-content;
+            text-decoration: none;
+            color: $secondary-text-color;
+        }
+
+        li {
+            height: 70px;
+        }
+
+        #smallscr {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            background: #FECEE9;
+            width: 100%;
+            /* height: 70px; */
+            z-index: 10;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr;
+        }
+
+        #smallscr a {
+            background-color: #FECEE9;
+            //box-sizing: border border-box;
+            text-decoration: none;
+            //display: flex;
+            //justify-content: space-between;
+
+            align-items: center;
+            gap: 12px;
+            height: 4rem;
+        }
+
+        #accueil {
+            background-image: image-set("/assets/images/home.png");
+            background-repeat: no-repeat;
+            color: transparent;
+
+        }
+
+
+
+        #login {
+            background-image: image-set("/assets/images/user.png");
+            background-repeat: no-repeat;
+            color: transparent;
+        }
     }
 
-    nav {
-        visibility: hidden;
-    }
 
 }
