Changing div to main on router outlet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div id="page-wrap">
+<main id="page-wrap">
     <div id="page-content">
         <div class="stock">
             <app-stock [stockName]="'SUGAR'"></app-stock>
@@ -7,5 +7,5 @@
         </div>
         <router-outlet></router-outlet>
     </div>
-</div>
+</main>
 <app-footer></app-footer>
