update service methods and component articles/article methods + update html for both component

--- a/src/app/pages/article/article.component.html
+++ b/src/app/pages/article/article.component.html
@@ -1,4 +1,4 @@
-<article id="main-content">
+<article *ngIf="article" id="main-content">
     <app-article-title class="title"></app-article-title>
     <app-article-body class="body"></app-article-body>
     <div class="article-bottom">
