--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -6,6 +6,6 @@
     </h1>
   </div>
   <div class="category-articles">
-    <app-article-type-small *ngFor="let i of arr(20).fill(1)" class="category-article"></app-article-type-small>
+    <app-article-type-small *ngFor="let article of articles" class="category-article"></app-article-type-small>
   </div>
 </section>
