Routers were moved and adding changes according to the pull request

--- a/src/app/components/articles/article-type-main/article-type-main.component.html
+++ b/src/app/components/articles/article-type-main/article-type-main.component.html
@@ -1,4 +1,5 @@
-<article class="main-type1">
+
+<article class="main-type1" routerLink="{{APP_ROUTES.articles}}/{{ article.slug }}">
     <img src={{article.publication_image}}>
     <div class="blur">
         <div class="description">
