--- a/src/app/pages/category/category.component.scss
+++ b/src/app/pages/category/category.component.scss
@@ -8,6 +8,9 @@
   justify-content: center;
 
   .category-header {
+    border: 2px solid $secondary-text-color;
+    border-radius: 10px;
+
     h1 {
       width: 100%;
       display: flex;
@@ -17,14 +20,14 @@
 
       span:nth-of-type(1) {
         font-family: "Glam-queen";
-        font-size: 3em;
+        font-size: 2em;
         margin: 0;
         padding-left: $small-border;
       }
 
       span:nth-of-type(2) {
         color: $secondary-text-color;
-        font-size: 2em;
+        font-size: 1.5em;
         padding: $small-border;
         margin: 0;
         font-weight: bold;
